--- a/FastFood/examples/FastFoodExample.html
+++ b/FastFood/examples/FastFoodExample.html
@@ -24,7 +24,7 @@
 
                 <div class="big-card">
                     <div class="card-img"> 
-                        <img src="../static/pic.jpeg" alt="">
+                        <img src="" alt="">
                     </div>
                     <div class="card-text">
                         <button type="button" class="btn-select">SELECT</button>
@@ -40,7 +40,7 @@
 
                 <div class="big-card">
                     <div class="card-img"> 
-                        <img src="../static/pic.jpeg" alt="">
+                        <img src="" alt="">
                     </div>
                     <div class="card-text">
                         <button type="button" class="btn-select">SELECT</button>
