--- a/Natural Burial/FastFood/examples/FastFoodExample.html
+++ b/Natural Burial/FastFood/examples/FastFoodExample.html
@@ -7,38 +7,37 @@
     <link rel="stylesheet" href="../FastFood.css">
 </head>
 <body>
-    <div class="form-box">
-        <form action="getBurialInfo()">
-            <div class="form-row">
-                <input class="text-input" type="text" id="" name="">
 
-            </div>
+    <input class="text-input" type="text" id="" name="">
 
-            <br>
+    <br><br>
 
-            <div class="form-row-imgs">
+    <div class="big-card">
+        <div class="card-img"> 
+            <img src="" alt="">
+        </div>
 
-                <div class="big-card">
-                    <div class="card-img"> 
-                        <img src="" alt="">
-                    </div>
-                    <div class="card-text">
-                        <button type="button" class="btn-select">SELECT</button>
-                        <button type="button" class="play-audio">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="" height="70%" fill="currentColor" class="bi bi-mic-fill" viewBox="0 0 16 16">
-                                <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0z"/>
-                                <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5"/>
-                              </svg>
-                        </button>
-
-                    </div>
-                </div>
-
-            </div>
-
-        </form>
+        <div class="card-text">
+            <button type="button" class="btn-select">SELECT</button>
+            <button type="button" class="play-audio">
+                <svg xmlns="http://www.w3.org/2000/svg" width="" height="70%" fill="currentColor" class="bi bi-mic-fill" viewBox="0 0 16 16">
+                    <path d="M5 3a3 3 0 0 1 6 0v5a3 3 0 0 1-6 0z"/>
+                    <path d="M3.5 6.5A.5.5 0 0 1 4 7v1a4 4 0 0 0 8 0V7a.5.5 0 0 1 1 0v1a5 5 0 0 1-4.5 4.975V15h3a.5.5 0 0 1 0 1h-7a.5.5 0 0 1 0-1h3v-2.025A5 5 0 0 1 3 8V7a.5.5 0 0 1 .5-.5"/>
+                  </svg>
+            </button>
+        </div>
     </div>
 
+    <br><br>
+
+    <div class="dropdown">
+        <select name="options" id="">
+            <option value=" " disabled selected hidden></option>
+            <option value="Option 1">Option 1</option>
+            <option value="Option 2">Option 2</option>
+            <option value="Option 3">Option 3</option>
+        </select>
+    </div>
 
 </body>
 </html>
